<resources>
    <string name="app_name">Paveways</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="new_user">New User?</string>
    <string name="signup_here">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone Number</string>
    <string name="retype_password">Confirm Password</string>
    <string name="already">Already a User?</string>
    <string name="already_sign_in">Already a User? Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user_signup">New User? Sign Up</string>
    <string name="ok">OK</string>
    <string name="available_listing">Available Listings</string>
    <string name="listing">Listings</string>
    <string name="network_not_connected">Network error. PLease Check your Internet Connection</string>
    <string name="categories">Our Categories</string>
    <string name="details">Details</string>
    <string name="feed">Feedback</string>
    <string name="network_error">Please check your Internet connection</string>
    <string name="you_have">You have</string>
    <string name="product_in_cart">in cart</string>
    <string name="fail_todeletecart">Failed to delete listing</string>
    <string name="fail_toeditcart">Failed to edit listing qty</string>
    <string name="fail_toplaceorder">Failed to place order</string>
    <string name="fail_toorderhistory">Failed to get order history</string>
    <string name="continue_tag">Continue</string>
    <string name="qty">Qty</string>
    <string name="Approved">approved</string>
    <string name="faqs">QSTN1:My order has never arrived\n
                        ANS1;Sorry for the delays.Please call us for help\n\n

                        QSTN2:My order arrived damaged\n
                        ANS2:Please email us and give more information about this \n\n

                        QSTN3:I would like to return my order\n
                        ANS3:We shall send our representatives to sort the issue</string>
    <string name="contact">Phone Number:0797667411\n
                                        0717565039\n\n

                            Email:ukulimapoultry@gmail.org\n
                                    jacqulinembogo@ukulimapoultry.com \n\n

                       </string>
    <string name="thanks">Thank You For Joining us</string>
    <string name="thankshop">Hurrah! You got this far!</string>
    <string name="your_request">Please Wait \n For Admin Approval</string>
    <string name="paynow">Please make your payment here. \n Kindly note that payment should be more than half of the total amount </string>
    <string name="paynow3">Make your payment here \n it should constitute shipping fee only</string>
    <string name="payments">Your payment is successful \n Please check your order details for updates </string>
    <string name="amounts">Amount</string>
    <string name="home">Home</string>
    <string name="new_product">New Product</string>
    <string name="my_account">My Account</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">staff login</string>
    <string name="create_account">Create Account </string>
    <string name="submit">Submit</string>
    <string name="address">Address</string>
    <string name="new_products">New Products</string>
    <string name="best_selling">Best Selling</string>
    <string name="trending">Trending</string>
    <string name="conditional">Conditional</string>
    <string name="password_not_match">passwords do not match</string>
    <string name="failed_request">request failed</string>
    <string name="is_invalid">Invalid</string>
    <string name="otp_has_send">OTP has been sent to you phone number. </string>
    <string name="otp">OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_not_match">OTP is incorrect</string>
    <string name="create_new_password">Create New Password </string>
    <string name="overview">Overview</string>
    <string name="review">Review</string>
    <string name="write_review">Write a Review</string>
    <string name="your_rating">Your Rating</string>
    <string name="review_summery">Summery</string>
    <string name="related_prod">Related Products</string>
    <string name="search_name">Search</string>
    <string name="instock">In Stock</string>
    <string name="outofstock">Out of Stock</string>
    <string name="postedby">Posted By </string>
    <string name="wishlist">Wishlist</string>
    <string name="county_prompt">Choose a county</string>
    <string-array name="county_arrays">
        <item>Mombasa</item>
        <item>Nairobi</item>
        <item>Kisumu</item>
        <item>Nyeri</item>
        <item>Meru</item>
        <item>Kiambu</item>
        <item>Embu</item>
        <item>Migori</item>
    </string-array>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="add_to_cart">Successfully added into cart.</string>
    <string name="fail_add_to_cart"> Please try again</string>
    <string name="add_tag">Add</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="fail_toGetcart">Please try again</string>
    <string name="add_to_wishlist">Successfully Added into user wishlist</string>
    <string name="fail_add_to_wishlist">Please try again</string>
    <string name="delivery_date">Deliver in 3-4 Days</string>
    <string name="fail_togetwishlist">Please try again.</string>
    <string name="no_prod_into_cart">You do not have any product to purchase </string>
    <string name="prod_name">Product Name</string>
    <string name="price">Price</string>
    <string name="cart_subtotal">Cart Subtotal</string>
    <string name="shipping_fee">Shipping Fee</string>
    <string name="order_total">Order Total</string>
</resources>