<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/logo_image"
            android:src="@drawable/paveways_logo"
            />
        <TextView
            android:id="@+id/signuptext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:text="@string/signup_here"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/text_color"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/f_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_medium"
            android:hint="@string/full_name"
            android:padding="@dimen/padding_medium"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:padding="@dimen/padding_medium"
            android:layout_margin="@dimen/padding_medium"
            android:hint="@string/username"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:padding="@dimen/padding_medium"
            android:inputType="textEmailAddress"
            android:layout_margin="@dimen/padding_medium"
            android:hint="@string/email"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_number"
            android:inputType="phone"
            android:padding="@dimen/padding_medium"
            android:layout_margin="@dimen/padding_medium"
            android:hint="@string/phone_no"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:padding="@dimen/padding_medium"
            android:inputType="textPassword"
            android:layout_margin="@dimen/padding_medium"
            android:hint="@string/password"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/retype_password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_medium"
            android:layout_margin="@dimen/padding_medium"
            android:hint="@string/retype_password"/>z


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_here"
            android:id="@+id/create_account"
            android:gravity="center_horizontal"
            android:background="@drawable/rounded_green"
            android:textColor="@color/white"
            android:layout_margin="@dimen/padding_medium"
            android:padding="@dimen/padding_medium"/>


        <TextView


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:textColor="@color/black"
            android:id="@+id/signin"
            android:text="@string/already_sign_in"
            android:layout_margin="@dimen/padding_medium"
            android:textStyle="bold"
            android:padding="@dimen/padding_medium"/>









    </LinearLayout>

</ScrollView>