<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryLight"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/r2"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="visible">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/padding_small"
                android:src="@drawable/paveways_logo" />

            <TextView
                android:id="@+id/signuptext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_medium"
                android:text="@string/signin"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/text_color"
                android:textStyle="bold|italic" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone_number"
                android:hint="@string/username"
                android:layout_margin="@dimen/padding_medium"
                android:padding="@dimen/padding_medium"
                />




            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:layout_margin="@dimen/padding_medium"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:padding="@dimen/padding_medium"
                />

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_medium"
                android:background="@drawable/rounded_green"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding_medium"
                android:text="@string/login"
                android:textColor="@color/white" />

           <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/or"
                android:text="@string/or"
                android:layout_margin="@dimen/padding_large"
               android:padding="@dimen/padding_large"
              />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/signup_here"
                android:gravity="center_horizontal"
                android:layout_margin="@dimen/padding_large"
                >

                <TextView
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user_signup"
                    android:textStyle="bold"
                    android:textColor="@color/text_color"
                    android:layout_margin="@dimen/padding_small"/>


            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:id="@+id/pb1">
                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateDrawable="@drawable/ic_baseline_donut_large_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>



</ScrollView>