<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relative_lay2"
        android:visibility="visible"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thanks"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/thankshop"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/thanks"
            android:id="@+id/your_request"
            android:textStyle="normal"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/grey"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/paynow"
            android:gravity="center"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_2"
            android:padding="@dimen/padding_medium"
            android:layout_below="@+id/your_request"
           >

             <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/amount"
                android:hint="@string/amounts"
                android:textColor="@color/black"
                 android:inputType="number"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/padding_small"/>

            <TextView
                android:id="@+id/continuebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginStart="@dimen/padding_small"
                android:layout_marginTop="@dimen/padding_small"
                android:layout_marginEnd="@dimen/padding_small"
                android:layout_marginBottom="@dimen/padding_small"
                android:background="@drawable/rounder_small_green"
                android:gravity="center_horizontal"
                android:text="@string/continue_tag"
                android:textColor="@color/white" />



</RelativeLayout>

        </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/extralayout"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thanks1"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/thankshop"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/thanks1"
            android:id="@+id/your_request1"
            android:textStyle="normal"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/grey"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="Please enter the Transaction code"
            android:gravity="center"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/extralayout_2"
            android:layout_below="@+id/your_request1"

            >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/amount1"
                android:hint="Code..."
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/padding_small"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/continuebtn1"
                android:text="Finish"
                android:gravity="center_horizontal"
                android:background="@drawable/rounder_small_green"
                android:textColor="@color/white"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/padding_small"/>



        </RelativeLayout>

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relative_lay3"
        android:visibility="gone"
        >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imagedone"
            android:src="@mipmap/ic_select_done"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding_large"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/payments"
            android:layout_below="@+id/imagedone"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/payments"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/payments"
            android:id="@+id/shop"
            android:textStyle="normal"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/grey"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/thankshop"
            android:gravity="center"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shopimage"
            android:gravity="center"
            android:text="Continue Shopping"
            android:padding="10dp"
            android:visibility="gone"
            android:background="@drawable/rounded_green"
            android:layout_below="@+id/shop"
            android:drawableLeft="@drawable/ic_baseline_shopping_cart_24"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:textStyle="normal|bold"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/homebutton"
            android:gravity="center"
            android:text="Order Details"
            android:background="@drawable/rounded_green"
            android:padding="10dp"
            android:visibility="gone"
            android:layout_margin="10dp"
            android:layout_below="@+id/shopimage"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_baseline_reorder_24"
            android:textStyle="normal|bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/homebutton2"
            android:gravity="center"
            android:visibility="gone"
            android:text="Finish transaction"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_below="@+id/shopimage"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_baseline_reorder_24"
            android:tint="@color/white"
            android:textStyle="normal|bold"/>


    </RelativeLayout>








</LinearLayout>