<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_1"
            android:paddingTop="@dimen/padding_small">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/prod_name"
                android:gravity="center"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/qty"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/price"
                android:textColor="@color/black"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:id="@+id/line1"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="2dp"
            android:background="@color/black"
           />



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/item_recyclerview"
            android:padding="@dimen/padding_small">

        </androidx.recyclerview.widget.RecyclerView>
    </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:id="@+id/line2"
            android:layout_margin="@dimen/padding_small"
            android:background="@color/black" />
        <LinearLayout
            android:layout_width="300dp"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Subtotal"
                android:textColor="@color/black"
                android:layout_margin="@dimen/padding_medium"/>
            <TextView
                android:id="@+id/subtotal_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="2"
                android:layout_margin="10dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:visibility="gone"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Facilitation Fee"
                android:textColor="@color/black"
                android:layout_margin="10dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/shipping_value"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            />


        </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_gravity="end"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Total"
            android:textColor="@color/black"
            android:layout_margin="@dimen/padding_medium"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/order_total_value"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>


    </LinearLayout>
        <TextView
            android:id="@+id/place_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/padding_too_large"
            android:layout_marginTop="30dp"
            android:layout_marginRight="@dimen/padding_too_large"
            android:layout_marginBottom="@dimen/text_extra_large"
            android:background="@drawable/rounded_green"
            android:gravity="center_horizontal"
            android:text="Continue"
            android:textColor="@color/white" />


</LinearLayout>
